# defamed

./: Cargo.toml  LICENSE  README.md
.github/workflows/: publish.yml  tests.yml
defame/: Cargo.toml
defame-test/: Cargo.toml
defame-test/src/: main.rs
defame/src/: block_logic.rs  lib.rs  macro_gen.rs  params.rs  traits.rs
defamed/: Cargo.toml  README.md
defamed-macros/: Cargo.toml
defamed-macros/src/: block_logic.rs  lib.rs  macro_gen.rs  params.rs
defamed-test/: Cargo.toml
defamed-test-lib/: Cargo.toml
defamed-test-lib/src/: lib.rs  tests.rs
defamed-test/src/: main.rs  submodule.rs
defamed/src/: block_logic.rs  lib.rs  macro_gen.rs  params.rs  permute.rs  traits.rs
defamed/src/permute/: fields.rs  params.rs
defamed_test/: Cargo.toml
defamed_test/src/: lib.rs  main.rs
examples/external_crate/: Cargo.toml
examples/external_crate/examples/: external_crate.rs
examples/in_internal_crate/: Cargo.toml
examples/internal_crate/: Cargo.toml
examples/internal_crate/examples/: internal_crate.rs
test/: Cargo.toml
test/src/: lib.rs  main.rs  tests.rs
