[package]
name = "defamed"
version = "0.1.0"
edition = "2021"
description = "Default, positional and named parameters"
license = "MIT"
license-file = "../LICENSE"
readme = "README.md"
repository = "https://github.com/cruzerngz/defamed"
keywords = ["default", "macro"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

permute = "0.2"
