[package]
name = "defamed"
version = "0.2.0"
edition = "2021"
description = "Default, positional and named parameters"
license = "MIT"
readme = "README.md"
repository = "https://github.com/cruzerngz/defamed"
keywords = ["default", "macro"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
proc-macro-warning = "1"

permute = "0.2"
